--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <body>
     <div class="card-container">
       <div class="sedan-card">
+        <img src="./images/icon-sedans.svg" alt="Sedan icon" class="card-icon">
         <h1>Sedans</h1>
         <p
           >Choose a sedan for its affordability and excellent fuel economy.
@@ -34,6 +35,7 @@
       </div>
 
       <div class="suv-card">
+        <img src="./images/icon-suvs.svg" alt="SUV icon" class="card-icon">
         <h1>SUVs</h1>
         <p
           >Take an SUV for its spacious interior, power, and versatility.
@@ -43,6 +45,7 @@
       </div>
 
       <div class="luxury-card">
+        <img src="./images/icon-luxury.svg" alt="Luxury icon" class="card-icon">
         <h1>Luxury</h1>
         <p
           >Cruise in the best car brands without the bloated prices. Enjoy the
